update scann logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ scan.project.path=D:/projects/old-dependency-demo
 scan.output.path=D:/fixed-projects/
 
 # Scan only pom.xml or full project
-scan.pom.only=true
+scan.pom.only=false
 
 # Scheduler cron (every 10 minutes example)
 scan.cron=*/10 * * * * *
