--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ server.port=7070
 dependency-check.nvd-api-key=5fc305df-dc71-4c58-b1b5-e8fde3296247
 
 # Local project path (D drive)
-scan.project.path=D:/projects/vulnerable-spring-boot
+scan.project.path=D:/projects/sonar-vul
 
 
 # Output base folder
 scan.output.path=D:/fixed-projects/
-old.pom.file.text=true
+old.pom.file.text=false
 # Scan only pom.xml or full project
-scan.pom.only=true
+scan.pom.only=false
 
 # Scheduler cron (every 10 minutes example)
 scan.cron=*/10 * * * * *
