--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,15 @@ server.port=7070
 dependency-check.nvd-api-key=5fc305df-dc71-4c58-b1b5-e8fde3296247
 
 # Local project path (D drive)
-scan.project.path=D:/projects/sonar-vul
+scan.project.path=D:/projects/
 
 
 # Output base folder
 scan.output.path=D:/fixed-projects/
 old.pom.file.text=false
 # Scan only pom.xml or full project
-scan.pom.only=false
+scan.pom.only=true
+scan.classfiles.only=false
 
 # Scheduler cron (every 10 minutes example)
 scan.cron=*/10 * * * * *
